--- a/roles/console/tasks/validation.yml
+++ b/roles/console/tasks/validation.yml
@@ -6,3 +6,5 @@
 - name: Set mspid
   set_fact:
     mspid: "{{ ansible_operator_meta.name }}-{{ organization|replace('.', '-') }}"
+    ROOTDIR: "{{ lookup('env','HOME') }}"
+
