--- a/roles/agent/tasks/validation.yml
+++ b/roles/agent/tasks/validation.yml
@@ -1,6 +1,6 @@
 - name: Check if the organization variable is set
   when: organization == None or (organization|trim) == ''
-  include_tasks: '{{ role_path }}/common/endplay.yml'
+  include_tasks: '{{ ROOTDIR }}/playbooks/common/endplay.yml'
   vars:
     RESULT_MSG: 'Failed - organization must be provided in the request'
 
@@ -21,12 +21,13 @@
 
 - name: Validate all actions must be part of supported
   when: (allactions | difference(supactions) | length) > 0
-  include_tasks: '{{ role_path }}/common/endplay.yml'
+  include_tasks: '{{ ROOTDIR }}/playbooks/common/endplay.yml'
   vars:
     RESULT_MSG: 'Failed -Action {{ allactions | difference(supactions) | join(",") }} not supported!'
 
 - name: Set work directory
   set_fact:
+    ROOTDIR: "{{ lookup('env','HOME') }}"
     bindir: "{{ lookup('env','HOME') }}/agent/{{ release }}"
     workdir: "{{ lookup('env','HOME') }}/agent/{{ 99999999 | random | to_uuid }}"
     orgid: "{{ organization | replace('.', '-') }}"
