--- a/Pipfile
+++ b/Pipfile
@@ -4,16 +4,16 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-ansible-runner = "~=1.4.7"
+ansible-runner = "~=2.0.4"
 ansible-runner-http = "==1.0.0"
 ipaddress = "==1.0.23"
-openshift = "~=0.12.0"
-ansible = "~=2.9.15"
-jmespath = "==0.10.0"
+openshift = "~=0.13.1"
+ansible = "~=2.9.27"
+jmespath = "~=1.0.0"
 # cryptography needs to be pinned to 3.3.2 as this is the last version
 # before its setup requires rust, which is not available via RPM in the
 # base image. This pin should be re-evaluated once the base image is updated.
-cryptography = "==3.3.2"
+cryptography = "==3.4.8"
 
 [dev-packages]
 
